fix: the home video overflow on Mobile (#1545)

--- a/website/src/css/landing-sections/video.css
+++ b/website/src/css/landing-sections/video.css
@@ -5,3 +5,9 @@
 .video-js.vjs-paused .vjs-big-play-button {
   display: inline-block !important;
 }
+
+.video-player {
+  aspect-ratio: 16/9;
+  max-width: 100%;
+  height: 100%;
+}
